kube-manifests/rmq-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpro-rmq-deployment
  labels:
    app: vpro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vpro-rmq
  template:
    metadata:
      labels:
        app: vpro-rmq
    spec:
      containers:
      - name: vprormq
        image: rabbitmq
        ports:
        - name: rabbitmq-port
          containerPort: 5672
