kube-manifests/vpro-app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpro-app-deployment
  labels:
    app: vpro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vpro-app
  template:
    metadata:
      labels:
        app: vpro-app
    spec:
      containers:
      - name: vproapp
        image: vprofile/vprofileapp
        ports:
        - name: vproapp-port
          containerPort: 8080
