kube-manifests/rds-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vpro-rds-service
spec:
  type: ExternalName
  externalName: database-1.cj6w02cuehgf.us-east-1.rds.amazonaws.com
